[tool.poetry]
name = "neutralnet"
version = "1.0.0"
description = ""
authors = ["sebby2k@gmail.com"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.18"
pandas = "^1.1"
tensorflow = "^2.3"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
pylint = "^2.5.3"
pytest = "^6.0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
