[tool.poetry]
name = "neutralnet"
version = "1.0.0"
description = ""
authors = ["sebby2k@gmail.com"]

[tool.poetry.dependencies]
babel = "^2.8"
python = "^3.8"
numpy = "^1.18"
pandas = "^1.1"
tensorflow = "^2.3"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
ipykernel = "^5.3.4"
matplotlib = "^3.3.2"
mypy = "^0.782"
pylint = "^2.6.0"
pytest = "^6.1.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
